--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Customers Manager</title>
+  	<link href="css/Home.css" rel="stylesheet" />
+	<link href="css/Home-rtl.css" rel="stylesheet" />
   	<link href="css/Main.css" rel="stylesheet" />
 	<link href="css/Customers.css" rel="stylesheet" />
 	<link href="css/ListView.css" rel="stylesheet" />
