--- a/app/directives/list-view/list-view.html
+++ b/app/directives/list-view/list-view.html
@@ -1,22 +1,20 @@
 <div class="list-view">
-	<div class="list-view__row">
-		<div class="list-view__cell" ng-click="list.onSort('name')">Customer</div>
-		<div class="list-view__cell" ng-click="list.onSort('email')">Email</div>
-		<div class="list-view__cell" ng-click="list.onSort('phone')">Phone</div>
-		<div class="list-view__cell" ng-click="list.onSort('department')">Department</div>
-	</div>
-	<div class="list-view__row" ng-repeat="customer in model.customersSource.data track by customer.id">
-		<div class="list-view__cell">
-			<span ng-bind-html="customer.fullName"></span>
-		</div>
-		<div class="list-view__cell">
-			<span ng-bind-html="customer.email"></span>
-		</div>
-		<div class="list-view__cell">
-			<span ng-bind-html="customer.phone"></span>
-		</div>
-		<div class="list-view__cell">
-			<span ng-bind-html="customer.department"></span>
-		</div>
-	</div>
+	<table class="list-view__table" >
+		<thead>
+			<tr>
+				<th>Customer</th>
+				<th>Email</th>
+				<th>Phone</th>
+				<th>Department</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr ng-repeat="customer in model.customersSource.data | limitTo:limit track by customer.id">
+				<td><span ng-bind-html="customer.fullName"></span></td>
+				<td><span><a href="mailto:{{customer.email}}" ng-bind-html="customer.email"></a></span></td>
+				<td><span ng-bind-html="customer.phone"></span></td>
+				<td><span ng-bind-html="customer.department"></span></td>
+			</tr>
+		</tbody>
+	</table>
 </div>
