--- a/app/directives/user-editor/user-editor-template.html
+++ b/app/directives/user-editor/user-editor-template.html
@@ -1,4 +1,4 @@
-<form name="form" novalidate class="css-form">
+<form name="form" novalidate>
     <div class="field">
         <label>Name</label><br/>
         <input type="text" ng-model="slaveModel.name" required />
@@ -11,8 +11,8 @@
         <label>Email</label><br/>
         <input type="email" ng-model="slaveModel.email" required />
     </div>
-    <div>
-        <button ng-click="userEditor.submit(form);">Submit</button>
+    <div class="buttons">
+        <button ng-click="userEditor.submit(form)">Submit</button>
         <a href="#!/">Cancel</a>
     </div>
 </form>
